--- a/camera.html
+++ b/camera.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>PoseNet - Camera Feed Demo</title>
+    <title style="font-family: 'Trebuchet MS', sans-serif;">ComiCall - Animate Your Video Call </title>
     <style>
         body {
             display: flex;
@@ -130,16 +130,6 @@
         </div>
         <canvas class="illustration-canvas"></cavnas>
     </div>
-    <div class="footer">
-        <div class="footer-text">
-          <p>
-            Pose Animator runs TF.js <strong>FaceMesh</strong> and <strong>PoseNet</strong> models to animate SVG illustrations with camera feed / static images.<br>
-            It currently supports <strong>single-pose</strong>, <strong>single-face</strong> detection, and has been tested on Destkop Chrome & iOS Safari.
-            <br>
-            (PoseNet model config - MobileNetV1, output stride 16, quant bytes 2)
-          </p>
-        </div>
-      </div>
     <script src="camera.js"></script>
 </body>
 
