input, and video element added

--- a/camera.html
+++ b/camera.html
@@ -108,6 +108,8 @@
 </head>
 
 <body>
+    <div>my id:<span></span></div><br><br>
+    <div><input type="text" id="inputId"><button id="connect">connect</button></div>
     <div id="info" style='display:none'>
     </div>
     <div id="loading" style='position: relative; left: 0'>
@@ -130,6 +132,7 @@
         </div>
         <canvas class="illustration-canvas"></cavnas>
     </div>
+    <video style="height: 400px;width: 400px;" id = "videoIn"></video>
     <script src="camera.js"></script>
 </body>
 
